# rxMsgPassing

./: .buildinfo  .gitignore  README.md  index.html  search.html  setup.cfg  sg_execution_times.html
.github/workflows/: docs.yml
_downloads/2524cd0db0127cf868ea90d7da86a76d/: plot_sumProduct.py
_downloads/4a22484ec825862707aa5fa429c518b5/: plot_sumProduct.ipynb
_sources/auto_examples/: plot_sumProduct.rst.txt  sg_execution_times.rst.txt
code/scripts/: doBruteForce.py  doSumProduct.py  doSumProductChatGPT.py  utils.py
code/src/: sumProduct.py
docs/sphinx/: requirements.txt
docs/sphinx/source/: conf.py  index.rst  sg_execution_times.rst
docs/sphinx/source/auto_examples/: index.rst  plot_sumProduct.codeobj.json  plot_sumProduct.ipynb  plot_sumProduct.py  plot_sumProduct.py.md5  plot_sumProduct.rst  plot_sumProduct_codeobj.pickle  plot_sumProduct_marginalA.ipynb  plot_sumProduct_marginalA.py  plot_sumProduct_marginalA.py.md5  plot_sumProduct_marginalA.rst  plot_sumProduct_marginalAgivenB1.codeobj.json  plot_sumProduct_marginalAgivenB1.ipynb  plot_sumProduct_marginalAgivenB1.py.md5  plot_sumProduct_marginalAgivenB1.rst  sg_execution_times.rst
examples/sphinx_gallery/: README.rst  plot_sumProduct.py  plot_sumProduct_marginalA.py  plot_sumProduct_marginalAgivenB1.py
src/rxMsgPassing/: sumProduct.py
src/rxMsgPassing/tests/: test_sumProduct.py  utils.py
