[metadata]
name = learningReactiveMessagePassing
version = 0.0.01
description = Python code used to learn about reactive message passing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joacorapela/learningReactiveMessagePassing
author = Joaquin Rapela
author_email = j.rapela@ucl.ac.uk
license = MIT
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
package_dir = 
     = src
packages = find:
install_requires = 

[options.packages.find]
where = src
